force-app/main/default/objects/Inventory_Count__c/Inventory_Count__c.object-meta.xml
<CustomObject>
    <label>Inventory Count</label>
    <nameField>
        <displayFormat>IC-{0000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>