force-app/main/default/objects/Inventory_Count__c/fields/Inventory_Balance__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Balance__c</fullName>
    <label>Inventory Balance</label>
    <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
    <relationshipLabel>Inventory Counts</relationshipLabel>
    <relationshipName>Inventory_Counts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>