force-app/main/default/objects/Inventory_Count__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>AcctSeedERP__Location__c</referenceTo>
    <relationshipLabel>Inventory Counts</relationshipLabel>
    <relationshipName>Inventory_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>