force-app/main/default/objects/Inventory_Count__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Counts</relationshipLabel>
    <relationshipName>Inventory_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>